--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Working It: Training in Your Hands">
-    <meta property="og:description" content="Optimize your training plan by logging notes and statuses to ease off or add challenges to your training!">
+    <meta property="og:description" content="Optimize your training by logging statuses and notes to inform training decisions.">
     <meta property="og:image" content="https://i.imgur.com/g5Uqn01.png">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://competent-joliot-f4a7a3.netlify.app/">
     <meta name="twitter:card" content="https://i.imgur.com/g5Uqn01.png">
     <meta name="theme-color" content="#000000" />
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">    <meta
