switched from best to better

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Working It: Training in Your Hands">
-    <meta property="og:description" content="Optimize your training by recording evaluations to best inform training decisions.">
+    <meta property="og:description" content="Optimize your training by recording evaluations to better inform training decisions.">
     <meta property="og:image" content="https://i.imgur.com/g5Uqn01.png">
     <meta property="og:url" content="https://competent-joliot-f4a7a3.netlify.app/">
     <meta name="twitter:card" content="https://i.imgur.com/g5Uqn01.png">
