--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Working It: Training in Your Hands">
     <meta property="og:description" content="Optimize your training by recording evaluations to better inform training decisions.">
-    <meta property="og:image" content="https://i.imgur.com/uty0DMj.png">
+    <meta property="og:image" content="https://i.imgur.com/JO5suqk.png">
     <meta property="og:url" content="https://competent-joliot-f4a7a3.netlify.app/">
-    <meta name="twitter:card" content="https://i.imgur.com/uty0DMj.png">
+    <meta name="twitter:card" content="https://i.imgur.com/JO5suqk.png">
     <meta name="theme-color" content="#000000" />
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">    <meta
       name="description"
