--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://i.imgur.com/3OJDlDN.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Working It: Training in Your Hands">
     <meta property="og:description" content="Optimize your training by recording evaluations to better inform training decisions.">
@@ -16,7 +16,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Working It</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
